<?xml version="1.0"?>
<package format="3">
  <name>ros_chat</name>
  <version>0.0.1</version>
  <description>A ROS 2 node that connects to a WebSocket server and publishes messages to /user_input.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
